# must-starter

./: .gitignore  alembic.ini  app.py  database.py  example.db  main.py  pyproject.toml  user.py  utilisateurs.db
alembic/: env.py
alembic/versions/: 70b5b49221e2_initial_migration.py
alembic_sqlalchemy/: alembic.ini  example.db
app_fastapi_postgresql/: database.py  main.py  main2.py  main_async.py  routers.py
orm_sqlalchemy/: main.py  utilisateurs.db
orm_sqlalchemy/models/: user.py
redis_apps/: redis_db.py
redis_apps/redis_data_structures/: lists.py  redis_backed_queue.py  sessions.py  sets.py  strings.py  structured_user_profiles.py
tests/async/: conftest.py  test_db_async.py
tests/sync/: conftest.py  test_db_sync.py
