[project]
name = "must-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "bandit>=1.9.1",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "psycopg2>=2.9.11",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
