[project]
name = "must-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "bandit>=1.9.1",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "psycopg2>=2.9.11",
    "pyjwt>=2.10.1",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath="src"
